# agnt-evo

./: .env.example  .gitignore  COMMIT_MSG.txt  Dockerfile  START_AGNT_LOCAL.ps1  START_AGNT_LOCAL_APP.ps1  START_AGNT_LOCAL_APP_HIDDEN.vbs  _continue_sync.ps1  _fix_all.ps1  _sync_all.bat  _sync_neuralforge.bat  build-frontend.bat  cleanup-plugins.bat  commit-and-push.bat  create-pr-branch.bat  dash-audit.mjs  dash-summary.json  docker-compose.both.yml  docker-compose.lite.yml  docker-compose.yml  git-remove-plugins.bat  install-improve.bat  main.js  package-lock.json  package.json  push-evolution-fix.bat  test-improve-audit.mjs  test-improve-branch-audit.mjs  test-improve-plan.mjs  test-improve-reconcile.mjs  test-improve-review-plan.mjs  test-plan.mjs  test-review.mjs  test-tool.mjs
backend/: README.md  build-tessera-pkg.cjs  (+7 more)
neuralforge/: .gitignore  AGENT_GUIDE.md  CHANGELOG.md  README.md  dashboard.html  neuralforge-marketplace.agnt  pyproject.toml  test_evidence_fast.py  test_evidence_v2.py  test_live_e2e.py
neuralforge/agnt-plugin/: README.md  neuralforge.agnt
neuralforge/agnt-plugin/tools/: neuralforge_bridge.mjs
neuralforge/examples/: agent_tool_demo.py  cifar10_resnet.py  example_1_cifar10.py  example_2_text_classification.py  example_3_rl_policy.py  mnist_cnn.py
neuralforge/neuralforge/: __init__.py  cli.py  spec.py
neuralforge/neuralforge/auto/: __init__.py  architect.py  nas.py  scaling.py
neuralforge/neuralforge/backends/: __init__.py  pytorch_backend.py
neuralforge/neuralforge/config/: __init__.py
neuralforge/neuralforge/core/: __init__.py  forge.py  registry.py
neuralforge/neuralforge/evaluation/: __init__.py  evaluator.py  quality_predictor.py
neuralforge/neuralforge/memory/: __init__.py  insights_store.py
neuralforge/neuralforge/optimize/: __init__.py  distillation.py  meta_optimizer.py  pruning.py  quantization.py
neuralforge/neuralforge/tools/: __init__.py  agent_tool.py  langchain_tools.py  multi_agent.py
neuralforge/neuralforge/training/: __init__.py  callbacks.py  distributed.py  engine.py
neuralforge/neuralforge/utils/: __init__.py  export.py  profiling.py  visualization.py
neuralforge/tests/: __init__.py  test_auto.py  test_core.py  test_evaluation.py  test_models.py  test_optimize.py  test_spec.py  test_tools.py  test_training.py
(+2090 files in other folders)
