[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralforge"
version = "2.0.0"
description = "NeuralForge v2.0 — Agent-Native Neural Network Forge"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.8.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
training = [
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "comet-ml>=3.37.0",
    "mlflow>=2.9.0",
]
optimize = [
    "optuna>=3.5.0",
    "ax-platform>=0.3.0",
    "ray[tune]>=2.9.0",
]
export = [
    "onnx>=1.15.0",
    "safetensors>=0.4.0",
    "onnxruntime>=1.16.0",
]
agents = [
    "langchain-core>=0.1.0",
    "crewai-tools>=0.1.0",
]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
all = [
    "neuralforge[dev,training,optimize,export,agents,viz]",
]

[project.scripts]
neuralforge = "neuralforge.cli:app"

[tool.setuptools.packages.find]
include = ["neuralforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
